# slowrun

./: .gitignore  README.md  pyproject.toml  train.py
.gremlins/: research.py
ensemble/: README.md
limited/: README.md  train.py
