[project]
name = "slowrun"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.0",
    "numpy>=2.4.2",
    "tiktoken>=0.12.0",
    "wandb>=0.25.0",
    "torch==2.9.1"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
